@@ -11,6 +11,7 @@ PostGIS 2.4.5
            (Paul Ramsey)
   - #3980, delay freeing input until processing complete (lucasvr)
   - #4090, PG 11 support (Paul Ramsey, Raúl Marín)
+  - #3997, fix bug in lwgeom_median and avoid division by zero (Raúl Marín)
 
 
 PostGIS 2.4.4
